--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Helpers/FormatCurrency.php"
+          "app/Helpers/Helper.php"
         ]
     },
     "autoload-dev": {
