--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
+        "midtrans/midtrans-php": "^2.4",
         "spatie/laravel-permission": "^4.2",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
